# nanoLMengine

./: .gitignore  README.md  load_config.py  multigpu_train.sh  pyproject.toml  train-rwkv7.sh  train.py  train.sh
.aim/: run_metadata.sqlite
.aim/meta/index/: IDENTITY  LOG
configs/: default_project_configs.yaml
configs/model_configs/: linear_attn_fla_base.yaml  linear_attn_naive_base.yaml  rwkv7_base.yaml  transformer_base.yaml
configs/optimizer_configs/: default.yaml  lr_3e-4_adam-0.9-0.999_cosine_warmp5000-no_deacy.yaml  lr_3e-4_adam_cosine_warmp1000.yaml
configs/tokenizer_configs/: default.yaml  gla-1.3B-100B-tokenizer.yaml  rwkv.yaml
configs/train_configs/: default.yaml  rwkv7.yaml
models/: build_model.py
models/linear_attn/: linear_attn_bwd.py  linear_attn_fwd.py  linear_attn_layer.py  model.py  norm.py
models/linear_attn_fla/: __init__.py  activations.py  chunk.py  config_model.py  feature_map.py  fused_chunk.py  fused_cross_entropy.py  fused_linear_cross_entropy.py  fused_recurrent.py  l2warp.py  linear_attn_layer.py  mlp.py  model.py  model_utils.py  naive.py  norm.py  triton_utils.py
models/linear_attn_fla/ops/: chunk_h.py  chunk_kernel.py  chunk_o.py  fused_chunk.py  fused_chunk_kernel.py  fused_recurrent.py  fused_recurrent_kernel.py
models/linear_attn_sp/: l2norm.py  mlp.py  model.py
models/rwkv7/: README.md  model.py
models/rwkv7_sp/: model.py
models/transformer/: model.py
utils/: count_token.py  hf_dataset.py  load_config.py  resume.py
utils/tokenizer/: base.py
utils/tokenizer/rwkv_tokenizer/: rwkv_trie_tokenizer.py
(+4 files in other folders)
